Refactor SubmissionService: eliminar inyecciones de dependencias con @Autowired y simplificar la conversión de listas a toList() para mejorar la legibilidad del código.